# research_trail

./: README.md  all_dict.csv  pyproject.toml  requirements.txt  research_trail_plot.py
researchtrail/: __init__.py  research_trail.py  research_trail_plot.py
